# Copilot_Agent

./: .gitignore  README.md  control_axis_config.json  external_agent_chat_ui.py  fast_path_policy.json  requirements.txt
agent_core/: __init__.py  agent_tools.py  background_tools.py  copilot_core.py  copilot_guard_executor.py  copilot_situation.py  copilot_state_monitor.py  proactive_watchdog.py
code_test/: test_action_executor_mapping.py  test_agent_tool_bridge.py  test_copilot_situation.py  test_external_agent_chat_ui.py  test_proactive_watchdog.py  test_xpc_text_encoding.py
docs/: AGENT_ARCHITECTURE.md
voice_agent/: .env.example  ARCHITECTURE.md  PLAN.md  README.md  RUNBOOK.md  __init__.py  config.example.env  config.py  doubao_e2e_smoke.py  doubao_pdf_extract.txt  events.py  local_stt.py  local_stt_probe.py  metrics.md  mic_probe.py  orchestrator.py  session.py
voice_agent/tests/: test_local_stt.py  test_orchestrator.py  test_session.py  test_volcengine_protocol.py  test_volcengine_session_smoke.py
xpc/: __init__.py
xplane_agent_chat_plugin/: CMakeLists.txt  README.md  bridge_agent_chat.py  test_bridge_agent_chat.py
xplane_agent_chat_plugin/src/: AgentChatPlugin.cpp
